another inseption try

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<!-- Main -->
 		<div id="main">
-			<embed src="file.txt">
+			<iframe src="file.html" seamless></iframe>
 			<article class="thumb">
 				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
 				<h2>Magna feugiat lorem</h2>
