try first automated scaping

--- a/index.html
+++ b/index.html
@@ -35,69 +35,10 @@
 
 		<!-- Main -->
 		<div id="main">
-			<iframe src="file.html" seamless></iframe>
-			<article class="thumb">
-				<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-				<h2>Magna feugiat lorem</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-				<h2>Nisl adipiscing</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-				<h2>Tempus aliquam veroeros</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-				<h2>Aliquam ipsum sed dolore</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-				<h2>Cursis aliquam nisl</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-				<h2>Sed consequat phasellus</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-				<h2>Mauris id tellus arcu</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-				<h2>Nunc vehicula id nulla</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-				<h2>Neque et faucibus viverra</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-				<h2>Mattis ante fermentum</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-				<h2>Sed ac elementum arcu</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-			<article class="thumb">
-				<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-				<h2>Vehicula id nulla dignissim</h2>
-				<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-			</article>
-		</div>
 
+<article class="thumb"><a href="images/fulls/1649969388.jpg" class="image"><img src="images/thumbs/1649969388.jpg" alt="" /></a> <h2>Stirling, Scotland May 2022</h2><p>Stirling day-trip.... #stirling #visitstirling #visitscotland #oldtownjailstirling #thewallacemonument #wallacemonument</p> </article><article class="thumb"><a href="images/fulls/1649936160.jpg" class="image"><img src="images/thumbs/1649936160.jpg" alt="" /></a> <h2>Devils Pulpit May 2022</h2><p>Devil's Pulpit walk. #devilspulpit #scotland #visitglasgow #visitscotland</p> </article><article class="thumb"><a href="images/fulls/1649848565.jpg" class="image"><img src="images/thumbs/1649848565.jpg" alt="" /></a> <h2>Glasgow, Scotland May 2022</h2><p>Glasgow Westend with international locals! Hell.... yeah  #westend #glasgowwestend #scotland #glasgow</p> </article><article class="thumb"><a href="images/fulls/1649777090.jpg" class="image"><img src="images/thumbs/1649777090.jpg" alt="" /></a> <h2>Pollok Country Park May 2022</h2><p>A smirr is not gonna ruin a nice place! somewhere in Scotland 🏴󠁧󠁢󠁳󠁣󠁴󠁿 #pollokpark #pollokhouse #glasgow #scotland #daytrip #citywalk</p> </article><article class="thumb"><a href="images/fulls/1649691977.jpg" class="image"><img src="images/thumbs/1649691977.jpg" alt="" /></a> <h2>Edinburgh, Scotland May 2022</h2><p>One day in Edinburgh, Scotland... aye!!! #backpack #scotland #visitscotland #visitedinburgh #unitedkingdom #aye #irnbru</p> </article><article class="thumb"><a href="images/fulls/1649439965.jpg" class="image"><img src="images/thumbs/1649439965.jpg" alt="" /></a> <h2>Glasgow, Scotland May 2022</h2><p>First day in Glasgow! Shit is looking pretty good! #scotland #glasgow #necropolis #cityhike #unitedkingdom</p> </article><article class="thumb"><a href="images/fulls/1647905101.jpg" class="image"><img src="images/thumbs/1647905101.jpg" alt="" /></a> <h2>Frankfurt, Germany April 2022</h2><p>Well... that's how shit gets done! #thecomedycommunity #saturdaynight #laughing #getitdone #comedy</p> </article><article class="thumb"><a href="images/fulls/1647736975.jpg" class="image"><img src="images/thumbs/1647736975.jpg" alt="" /></a> <h2>Marburg, Germany April 2022</h2><p>Marburg glow! #marburg #marburgstadt #spigelust #spiegelustturm  #marburgerschloss</p> </article><article class="thumb"><a href="images/fulls/1645354954.jpg" class="image"><img src="images/thumbs/1645354954.jpg" alt="" /></a> <h2>Frankfurt, Germany March 2022</h2><p>Fun with the homeboys and gals! #talent #comedy #comedian #comedyclub #comedyshow #laughing #saturdayvibes #saturdaynight</p> </article><article class="thumb"><a href="images/fulls/1645125390.jpg" class="image"><img src="images/thumbs/1645125390.jpg" alt="" /></a> <h2>Frankfurt, Germany March 2022</h2><p>#havingfun #tellmeajoke #tellmeastory #makemelaugh #wednesday #wednesdaynight #happybirthday</p> </article>
+			
+		</div>
 		<!-- Footer -->
 		<footer id="footer" class="panel">
 			<div class="inner split">
